# uni-services

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: bootstrap.cmake  cxx_color_diagnostics.cmake  cxx_standard.cmake  options.cmake  pthread.cmake  sanitizers.cmake  toolchain-gcc.cmake  toolchain_clang.cmake  update_submodules.cmake
public/uni/common/: Logger.hpp
public/uni/common/concurrency/: Queue.hpp  ThreadPool.hpp
public/uni/common/event/: Event.hpp  EventListener.hpp  EventThread.hpp  Factory.hpp  FwdDeclarations.hpp  Helpers.hpp  IDispatcher.hpp  IEvent.hpp  IEventReceiver.hpp  IEventSender.hpp
public/uni/common/service/: Broadcast.hpp  Service.hpp
src/uni/common/: Logger.cpp
src/uni/common/event/: Dispatcher.cpp  Dispatcher.hpp  EventReceiver.cpp  EventReceiver.hpp  EventSender.cpp  EventSender.hpp  Factory.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/uni/common/: BroadcastTest.cpp  DemoApplicationTest.cpp  EventTest.cpp  ServiceTest.cpp
